util/data update, modal hideAll 추가

--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -146,6 +146,9 @@ const modal = new SKY.Modal(modalEl);
 
                     <p class="guide-text">hide 호출</p>
                     <pre><code class="language-js">modal.hide();</code></pre>
+
+                    <p class="guide-text">hideAll 호출 (열린 modal 전부 닫기)</p>
+                    <pre><code class="language-js">SKY.Modal.hideAll();</code></pre>
                 </section>
             </div>
         </div>
